; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_buffer_write_packet_header.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_buffer_write_packet_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.necp_packet_header = type { i32, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (i8**, i8*, i8*, i32)* @necp_buffer_write_packet_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @necp_buffer_write_packet_header(i8** %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8** %0, i8*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i8**, i8*** %5, align 8
  %11 = bitcast i8** %10 to i8*
  %12 = bitcast i8* %11 to %struct.necp_packet_header*
  %13 = getelementptr inbounds %struct.necp_packet_header, %struct.necp_packet_header* %12, i32 0, i32 2
  store i8* %9, i8** %13, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i8**, i8*** %5, align 8
  %16 = bitcast i8** %15 to i8*
  %17 = bitcast i8* %16 to %struct.necp_packet_header*
  %18 = getelementptr inbounds %struct.necp_packet_header, %struct.necp_packet_header* %17, i32 0, i32 1
  store i8* %14, i8** %18, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i8**, i8*** %5, align 8
  %21 = bitcast i8** %20 to i8*
  %22 = bitcast i8* %21 to %struct.necp_packet_header*
  %23 = getelementptr inbounds %struct.necp_packet_header, %struct.necp_packet_header* %22, i32 0, i32 0
  store i32 %19, i32* %23, align 8
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 24
  ret i8** %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
